--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
